katalog/harbor/distributions/common/ingress.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  labels:
    app: harbor
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - secretName: harbor-ingress-cert
      hosts:
        - core.harbor.domain
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: core
                port:
                  name: http-web
          - path: /service/
            pathType: Prefix
            backend:
              service:
                name: core
                port:
                  name: http-web
          - path: /v2/
            pathType: Prefix
            backend:
              service:
                name: core
                port:
                  name: http-web
          - path: /c/
            pathType: Prefix
            backend:
              service:
                name: core
                port:
                  name: http-web
      host: core.harbor.domain
